# cppbackend

./: .gitignore
sprint1/problems/async_server/solution/src/: http_server.cpp  http_server.h  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  gascooker.h  hotdog.h  ingredients.h  main.cpp  result.h
sprint1/problems/final_task/solution/: README.md
sprint1/problems/final_task/solution/src/: http_server.cpp  json_keys.h  json_loader.cpp  request_handler.cpp  request_handler.h
sprint1/problems/map_json/precode/src/: request_handler.h
sprint1/problems/map_json/solution/src/: http_server.cpp  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.h  request_handler.cpp  request_handler.h
sprint1/problems/radio/solution/src/: audio.h  main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
sprint2/examples/boost_log/: CMakeLists.txt  main.cpp
sprint2/examples/boost_log/build_debug/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: api_handler.cpp  api_handler.h  application.cpp  http_server.h  json_serializer.h  logging.h  logging_request_handler.h  main.cpp  player.cpp  player.h  player_tokens.h  players.cpp  ticker.h  url_utils.h
sprint2/problems/final_task/src/: api_handler.cpp  application.cpp  application.h  dog.h  http_types.h  logging_request_handler.h  model.cpp  model.h  player.cpp  player_tokens.cpp  players.h  request_handler.h  ticker.h
sprint2/problems/game_state/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/join_game/solution/src/: api_handler.cpp  api_handler.h  file_handler.h  http_response.cpp  main.cpp  model.h  player_tokens.h  players.cpp  players.h  request_handler.h  session.cpp  session.h  url_utils.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/: Dockerfile
(+54 files in other folders)
